# ai-interview-coach

./: README.md
client/: package-lock.json  package.json  tailwind.config.js
client/src/app/: globals.css  layout.tsx  page.tsx
public/assets/: notes.txt
server/: env.example  pyproject.toml
server/app/: api.py  main.py
server/app/api/model/: interview_coach_models.py
server/app/api/router/: interview_coach.py
server/app/api/service/: streaming_service.py
server/app/config/: env_config.py  logging.py
server/app/core/: graph_executer.py  main_graph.py  state.py
server/app/core/agent/: agents.py
server/app/core/agent/middleware/: __init__.py  interviewer.py  req_gathering.py
server/app/core/agent/model/: dynamic_prompt_model.py  evalutaion_model.py  interview_strategy_model.py  interviewer_model.py  question_maker_model.py  req_gathring_model.py
server/app/core/agent/prompt/: evaluation.py  interview_strategy.py  interviewer.py  question_maker.py  req_gathering.py
server/app/core/agent/tools/: __init__.py  web_search_tool.py
server/app/core/graph/: __init__.py  graph_builder.py  state.py
server/app/core/graph/nodes/: __init__.py  ask_more_info_node.py  base_node.py  continue_interview_node.py  evaluation_node.py  interview_strategy_node.py  interviewer_node.py  question_maker_node.py  req_gathering_node.py
server/app/core/llm/: genai_llm.py  llm.py  openai_llm.py  openai_resoning_llm.py
server/app/core/util/: postgres_checkpointer.py
server/app/security/: auth.py
server/app/util/vercel_adapter/: __init__.py  langgraph_vercel_adapter.py
(+4 files in other folders)
