[project]
name = "ai-interview-coach-server"
version = "0.1.0"
description = "AI Interview Coach Server"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.9.3",
    "fastapi>=0.124.4",
    "httpx>=0.28.1",
    "langchain>=1.2.0",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=4.1.1",
    "langchain-openai>=1.1.4",
    "langgraph>=1.0.5",
    "langgraph-checkpoint-postgres>=3.0.2",
    "psycopg[binary,pool]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "python-jose>=3.5.0",
    "uvicorn>=0.38.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
